--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
